# python-project-83

./: .env  .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  html_parser.py  url_utils.py  utils.py
page_analyzer/templates/: base.html  index.html  list_urls.html  view_url.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  messages.html  nav.html
page_analyzer/templates/urls/: list_urls.html  view_url.html
